additional commit for merge

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bbc58.vsidx
+/api/FinanceApi/.vs/FinanceApi/FileContentIndex/1889f83f-6182-4aad-9394-e0a4a700bb6e.vsidx
+/api/FinanceApi/.vs/FinanceApi/FileContentIndex/fb22b541-3457-4142-bb8e-cb4358d60ca7.vsidx
