removed some items from tracking in the backend project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@ api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bb
 /api/FinanceApi/.vs/FinanceApi/FileContentIndex/fb22b541-3457-4142-bb8e-cb4358d60ca7.vsidx
 *.bin
 *.vsidx
+/api/FinanceApi/.vs/FinanceApi/v17/.suo
+/api/FinanceApi/.vs/FinanceApi/v17/DocumentLayout.backup.json
+/api/FinanceApi/.vs/FinanceApi/v17/DocumentLayout.json
+/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.dll
+/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.exe
+/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.pdb
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/ref/FinanceApi.dll
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/refint/FinanceApi.dll
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/apphost.exe
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfoInputs.cache
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.dll
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.pdb
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.sourcelink.json
