--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bb
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.sourcelink.json
 /api/FinanceApi/.vs/FinanceApi/DesignTimeBuild/.dtbcache.v2
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfo.cs
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.CoreCompileInputs.cache
