adding another ignored item

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bb
 /api/FinanceApi/.vs/FinanceApi/DesignTimeBuild/.dtbcache.v2
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfo.cs
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.CoreCompileInputs.cache
+/api/FinanceApi/.vs/FinanceApi/v17/.futdcache.v2
