--- a/api/FinanceApi/FinanceApi/appsettings.json
+++ b/api/FinanceApi/FinanceApi/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
+
     "FinancialAppDatabase": "Data Source=localhost; Initial Catalog=FinancialApp; User Id=FinancialAppAccount; Password=myTestAccount123; Trusted_Connection=True; Encrypt=False;"
+      //TODO: fix this to ensure that we use the connection string below. This is TEMPORARY while installing the MSSQL cert locally
+    //"FinancialAppDatabase": "Data Source=localhost; Initial Catalog=FinancialApp; User Id=FinancialAppAccount; Password=myTestAccount123; Encrypt=False;"
   },
     "Logging": {
         "LogLevel": {
