--- a/api/FinanceApi/FinanceApi/FinanceApi.csproj
+++ b/api/FinanceApi/FinanceApi/FinanceApi.csproj
@@ -6,7 +6,17 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup>
+	<OpenApiGenerateDocuments>true</OpenApiGenerateDocuments>
+	<OpenApiDocumentsDirectory>$(MSBuildProjectDirectory)</OpenApiDocumentsDirectory>
+  </PropertyGroup>
+
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.*-*" />
+	<PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="9.0.*-*">
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		<PrivateAssets>all</PrivateAssets>
+	</PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
   </ItemGroup>
 
