--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bb
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfo.cs
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.CoreCompileInputs.cache
 /api/FinanceApi/.vs/FinanceApi/v17/.futdcache.v2
+/.vs
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
+/api/FinanceApi/FinanceApi/obj/Release/net9.0
