additional initial setup on new machine changes

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bb
 /.vs
 /api/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
 /api/FinanceApi/FinanceApi/obj/Release/net9.0
+/.vs/slnx.sqlite
+/api/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
+/api/FinanceApi/FinanceApi/obj/Release/net9.0/FinanceApi.AssemblyInfo.cs
+/api/FinanceApi/FinanceApi/obj/Release/net9.0/FinanceApi.AssemblyInfoInputs.cache
