--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bb
 /api/FinanceApi/FinanceApi/obj/FinanceApi.OpenApiFiles.cache
 /api/FinanceApi/FinanceApi/obj/project.assets.json
 /api/FinanceApi/FinanceApi/obj/project.nuget.cache
+/api/FinanceApi/.vs/FinanceApi/CopilotIndices
+/api/FinanceApi/FinanceApi/bin
