--- a/api/FinanceApi/FinanceApi/FinanceApi.csproj
+++ b/api/FinanceApi/FinanceApi/FinanceApi.csproj
@@ -18,6 +18,7 @@
 		<PrivateAssets>all</PrivateAssets>
 	</PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
