- updating files for gitignore and such from folder restructuring

--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,47 @@
-api/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bbc58.vsidx
-/api/FinanceApi/.vs/FinanceApi/FileContentIndex/1889f83f-6182-4aad-9394-e0a4a700bb6e.vsidx
-/api/FinanceApi/.vs/FinanceApi/FileContentIndex/fb22b541-3457-4142-bb8e-cb4358d60ca7.vsidx
+api/dotNet/FinanceApi/.vs/FinanceApi/FileContentIndex/e04c1a67-5837-49a3-a1af-b190d81bbc58.vsidx
+/api/dotNet/FinanceApi/.vs/FinanceApi/FileContentIndex/1889f83f-6182-4aad-9394-e0a4a700bb6e.vsidx
+/api/dotNet/FinanceApi/.vs/FinanceApi/FileContentIndex/fb22b541-3457-4142-bb8e-cb4358d60ca7.vsidx
 *.bin
 *.vsidx
-/api/FinanceApi/.vs/FinanceApi/v17/.suo
-/api/FinanceApi/.vs/FinanceApi/v17/DocumentLayout.backup.json
-/api/FinanceApi/.vs/FinanceApi/v17/DocumentLayout.json
-/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.dll
-/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.exe
-/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.pdb
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/ref/FinanceApi.dll
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/refint/FinanceApi.dll
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/apphost.exe
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfoInputs.cache
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.dll
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.pdb
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.sourcelink.json
-/api/FinanceApi/.vs/FinanceApi/DesignTimeBuild/.dtbcache.v2
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfo.cs
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.CoreCompileInputs.cache
-/api/FinanceApi/.vs/FinanceApi/v17/.futdcache.v2
+/api/dotNet/FinanceApi/.vs/FinanceApi/v17/.suo
+/api/dotNet/FinanceApi/.vs/FinanceApi/v17/DocumentLayout.backup.json
+/api/dotNet/FinanceApi/.vs/FinanceApi/v17/DocumentLayout.json
+/api/dotNet/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.dll
+/api/dotNet/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.exe
+/api/dotNet/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.pdb
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/ref/FinanceApi.dll
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/refint/FinanceApi.dll
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/apphost.exe
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfoInputs.cache
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.dll
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.pdb
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.sourcelink.json
+/api/dotNet/FinanceApi/.vs/FinanceApi/DesignTimeBuild/.dtbcache.v2
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.AssemblyInfo.cs
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.CoreCompileInputs.cache
+/api/dotNet/FinanceApi/.vs/FinanceApi/v17/.futdcache.v2
 /.vs
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
-/api/FinanceApi/FinanceApi/obj/Release/net9.0
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
+/api/dotNet/FinanceApi/FinanceApi/obj/Release/net9.0
 /.vs/slnx.sqlite
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
-/api/FinanceApi/FinanceApi/obj/Release/net9.0/FinanceApi.AssemblyInfo.cs
-/api/FinanceApi/FinanceApi/obj/Release/net9.0/FinanceApi.AssemblyInfoInputs.cache
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/rpswa.dswa.cache.json
+/api/dotNet/FinanceApi/FinanceApi/obj/Release/net9.0/FinanceApi.AssemblyInfo.cs
+/api/dotNet/FinanceApi/FinanceApi/obj/Release/net9.0/FinanceApi.AssemblyInfoInputs.cache
 /.vs/financialApp/v17/.wsuo
 /.vs/financialApp/v17/DocumentLayout.json
-/api/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.json
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.AssemblyReference.cache
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.FileListAbsolute.txt
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.genruntimeconfig.cache
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/rjsmcshtml.dswa.cache.json
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/rjsmrazor.dswa.cache.json
-/api/FinanceApi/FinanceApi/obj/FinanceApi.csproj.nuget.dgspec.json
-/api/FinanceApi/FinanceApi/obj/FinanceApi.csproj.nuget.g.props
-/api/FinanceApi/FinanceApi/obj/FinanceApi.OpenApiFiles.cache
-/api/FinanceApi/FinanceApi/obj/project.assets.json
-/api/FinanceApi/FinanceApi/obj/project.nuget.cache
-/api/FinanceApi/.vs/FinanceApi/CopilotIndices
-/api/FinanceApi/FinanceApi/bin
-/api/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.assets.cache
-/api/FinanceApi/FinanceApi/obj/FinanceApi.csproj.nuget.g.targets
+/api/dotNet/FinanceApi/FinanceApi/bin/Debug/net9.0/FinanceApi.json
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.AssemblyReference.cache
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.csproj.FileListAbsolute.txt
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.genruntimeconfig.cache
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/rjsmcshtml.dswa.cache.json
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/rjsmrazor.dswa.cache.json
+/api/dotNet/FinanceApi/FinanceApi/obj/FinanceApi.csproj.nuget.dgspec.json
+/api/dotNet/FinanceApi/FinanceApi/obj/FinanceApi.csproj.nuget.g.props
+/api/dotNet/FinanceApi/FinanceApi/obj/FinanceApi.OpenApiFiles.cache
+/api/dotNet/FinanceApi/FinanceApi/obj/project.assets.json
+/api/dotNet/FinanceApi/FinanceApi/obj/project.nuget.cache
+/api/dotNet/FinanceApi/.vs/FinanceApi/CopilotIndices
+/api/dotNet/FinanceApi/FinanceApi/bin
+/api/dotNet/FinanceApi/FinanceApi/obj/Debug/net9.0/FinanceApi.assets.cache
+/api/dotNet/FinanceApi/FinanceApi/obj/FinanceApi.csproj.nuget.g.targets
+api/dotNet/FinanceApi/.vs/VSWorkspaceState.json
