- installed cors - put sample data on endpoint for POC of loading data into angular app

--- a/api/Node/finance-api/package.json
+++ b/api/Node/finance-api/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/c99rahul/ts-node-express#readme",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2"
   },
